--- a/about.html
+++ b/about.html
@@ -22,55 +22,93 @@
     <hr>
 
     <main>
-        <section>
-            <h2>About Us</h2>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, est. Dolores id maxime molestiae quis nostrum eos esse dolorum quidem, repellat temporibus cum unde optio, rem repudiandae aliquid odit corporis quod! Delectus rerum voluptatibus
-                reprehenderit. Architecto, doloremque non error excepturi ipsam vero deserunt corrupti cupiditate sequi aliquid recusandae itaque illum mollitia fugit id explicabo consectetur eius in sint expedita. Incidunt praesentium odio laboriosam
-                nostrum sequi fuga id quidem rem commodi, eveniet excepturi veritatis sint ipsa nobis, perferendis quo eos ipsam atque! Autem distinctio praesentium corrupti minima nemo beatae, inventore sint quas nostrum saepe, quasi non consectetur
-                repellat asperiores earum vitae!
-            </p>
-        </section>
-        <h3>Our Team</h3>
-        <table style="width: 100%;" border="1">
+        <table style="width: 100%;">
             <tbody>
                 <tr>
-                    <td><img src=" https://picsum.photos/seed/picsum/200/200 " alt="John Marshal (Team Lead |BlueGrass Health Care."></td>
-                    <td>
-                        <h4>John Marshal (Team Lead)</h4>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quas optio reiciendis dolorem dolorum libero, enim id! Voluptas modi id quas expedita tempora amet consequuntur! Voluptas alias odit placeat rem officia dolorum tempora
-                            numquam exercitationem, dolorem esse, reprehenderit, nihil accusantium.</p>
+                    <td style="vertical-align: top;">
+                        <section>
+                            <h2>About Us</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ab, est. Dolores id maxime molestiae quis nostrum eos esse dolorum quidem, repellat temporibus cum unde optio, rem repudiandae aliquid odit corporis quod! Delectus rerum
+                                voluptatibus reprehenderit. Architecto, doloremque non error excepturi ipsam vero deserunt corrupti cupiditate sequi aliquid recusandae itaque illum mollitia fugit id explicabo consectetur eius in sint expedita. Incidunt
+                                praesentium odio laboriosam nostrum sequi fuga id quidem rem commodi, eveniet excepturi veritatis sint ipsa nobis, perferendis quo eos ipsam atque! Autem distinctio praesentium corrupti minima nemo beatae, inventore sint
+                                quas nostrum saepe, quasi non consectetur repellat asperiores earum vitae!
+                            </p>
+                        </section>
+                        <h3>Our Team</h3>
+                        <table style="width: 100%;" border="1">
+                            <tbody>
+                                <tr>
+                                    <td><img src=" https://picsum.photos/seed/picsum/200/200 " alt="John Marshal (Team Lead |BlueGrass Health Care."></td>
+                                    <td>
+                                        <h4>John Marshal (Team Lead)</h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A quas optio reiciendis dolorem dolorum libero, enim id! Voluptas modi id quas expedita tempora amet consequuntur! Voluptas alias odit placeat rem officia
+                                            dolorum tempora numquam exercitationem, dolorem esse, reprehenderit, nihil accusantium.</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><img src="https://picsum.photos/seed/picsum/200/200" alt="Allen Green |BlueGrass Health Care."></td>
+                                    <td>
+                                        <h4>Allen Green <small>Developer</small></h4>
+                                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, cupiditate, veniam accusantium consequuntur repellendus consectetur porro earum, id quaerat accusamus exercitationem facilis a ex at officiis sed corporis
+                                            tenetur neque autem. Itaque totam tempora ut odio quis, magni dolorum quibusdam.</p>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><img src="https://picsum.photos/seed/picsum/200/200" alt="Joseph Martin |BlueGrass Health Care"></td>
+                                    <td>
+                                        <h4>Joseph Martin <small>Tester</small></h4>
+                                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit id nemo odio recusandae error iste optio nesciunt eius deleniti atque adipisci quod, eaque delectus totam quas quasi eos pariatur architecto
+                                            natus necessitatibus expedita ipsam et cum esse? Mollitia, veniam tempora?</p>
+                                    </td>
+                                </tr>
+                            </tbody>
+
+                        </table>
+                        <section>
+
+                        </section>
+                        <section>
+                            <h3>Our costumers</h3>
+                            <li>Lorem, ipsum.</li>
+                            <li>Lorem, ipsum dolor.</li>
+                            <li>Lorem ipsum dolor sit.</li>
+                            <li>Lorem ipsum dolor sit amet.</li>
+                            <li>Lorem ipsum dolor sit amet consectetur.</li>
+                        </section>
                     </td>
-                </tr>
-                <tr>
-                    <td><img src="https://picsum.photos/seed/picsum/200/200" alt="Allen Green |BlueGrass Health Care."></td>
-                    <td>
-                        <h4>Allen Green <small>Developer</small></h4>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi, cupiditate, veniam accusantium consequuntur repellendus consectetur porro earum, id quaerat accusamus exercitationem facilis a ex at officiis sed corporis tenetur
-                            neque autem. Itaque totam tempora ut odio quis, magni dolorum quibusdam.</p>
-                    </td>
-                </tr>
-                <tr>
-                    <td><img src="https://picsum.photos/seed/picsum/200/200" alt="Joseph Martin |BlueGrass Health Care"></td>
-                    <td>
-                        <h4>Joseph Martin <small>Tester</small></h4>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit id nemo odio recusandae error iste optio nesciunt eius deleniti atque adipisci quod, eaque delectus totam quas quasi eos pariatur architecto natus necessitatibus
-                            expedita ipsam et cum esse? Mollitia, veniam tempora?</p>
+                    <td style="vertical-align: top; width:20%">
+                        <section>
+                            <form>
+                                <h4>Search</h4>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                                <input type="text" name="search" id="search" placeholder="Search through the website">
+                                <button>Search</button>
+                            </form>
+                        </section>
+                        <hr>
+                        <section>
+                            <h4>About</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum amet minus aut id reprehenderit adipisci, unde illo accusantium itaque vero.</p>
+                        </section>
+                        <hr>
+                        <section>
+                            <h4>Follow Us at:</h4>
+                            <div>
+                                <a href="https://www.instagram.com/zoomkonnect/?hl=en"> Instagram </a> <br>
+                                <a href="https://www.linkedin.com/in/adnan-sarang-5797471b8/"> linkedin </a>
+                            </div>
+                            <div>
+                                <a href=""></a>
+                            </div>
+                        </section>
                     </td>
                 </tr>
             </tbody>
 
         </table>
-        <section>
 
-        </section>
-        <section>
-            <h3>Our costumers</h3>
-            <li>Lorem, ipsum.</li>
-            <li>Lorem, ipsum dolor.</li>
-            <li>Lorem ipsum dolor sit.</li>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet consectetur.</li>
-        </section>
+
+
     </main>
     <hr>
 
