--- a/contact.html
+++ b/contact.html
@@ -22,79 +22,118 @@
     <hr>
 
     <main>
-        <section>
-            <h2>Contact</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem deserunt est molestias, deleniti tenetur quisquam asperiores aliquam doloribus et facere porro fugiat saepe, tempore architecto! Enim incidunt tempora magnam voluptates dicta eius
-                esse tempore atque sit laboriosam. Cumque eum nostrum quo aliquam amet reiciendis? Possimus magni illo totam, explicabo, laudantium at sequi ipsam, culpa iste dolorem officiis cumque! Aperiam minima minus, possimus accusantium dignissimos
-                similique asperiores incidunt corporis laborum, alias aliquid qui vero! Quidem, architecto quia aut rerum in natus facilis quae magnam nobis, ipsam itaque vitae. At neque, est, officia eveniet distinctio, atque laudantium dolorem deleniti
-                ad et tempora quibusdam cumque corporis error nesciunt odit dignissimos magni maiores alias accusantium quidem consequatur non unde vero. Alias quaerat nisi fugit vero laboriosam eaque cumque quos quis rerum obcaecati quas distinctio veniam
-                blanditiis in non accusamus tempore, suscipit temporibus earum reiciendis possimus autem sint? Quasi molestiae quidem hic placeat adipisci nobis quibusdam magnam a voluptates dolore? Ipsum repellat architecto praesentium ad minima eaque
-                a facilis earum? Sed id aperiam similique vel commodi, facere officia dolorem at? Ex cum nesciunt in, iusto perspiciatis qui explicabo veniam. Iure ipsa ex facilis quibusdam impedit saepe dolor. Illum quisquam sunt labore odit repudiandae
-                magnam quam!</p>
-        </section>
-        <section>
-            <h3>Feedback Form</h3>
-            <form>
-                <div>
-                    <label for="name">Name</label>
-                    <input type="text" name="name" id="name" placeholder="Enter Name">
-                </div>
-                <br>
+        <table style="width: 100%;">
+            <tbody>
+                <tr>
+                    <td style="vertical-align: top;">
+                        <section>
+                            <h2>Contact</h2>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem deserunt est molestias, deleniti tenetur quisquam asperiores aliquam doloribus et facere porro fugiat saepe, tempore architecto! Enim incidunt tempora magnam voluptates
+                                dicta eius esse tempore atque sit laboriosam. Cumque eum nostrum quo aliquam amet reiciendis? Possimus magni illo totam, explicabo, laudantium at sequi ipsam, culpa iste dolorem officiis cumque! Aperiam minima minus, possimus
+                                accusantium dignissimos similique asperiores incidunt corporis laborum, alias aliquid qui vero! Quidem, architecto quia aut rerum in natus facilis quae magnam nobis, ipsam itaque vitae. At neque, est, officia eveniet distinctio,
+                                atque laudantium dolorem deleniti ad et tempora quibusdam cumque corporis error nesciunt odit dignissimos magni maiores alias accusantium quidem consequatur non unde vero. Alias quaerat nisi fugit vero laboriosam eaque
+                                cumque quos quis rerum obcaecati quas distinctio veniam blanditiis in non accusamus tempore, suscipit temporibus earum reiciendis possimus autem sint? Quasi molestiae quidem hic placeat adipisci nobis quibusdam magnam a
+                                voluptates dolore? Ipsum repellat architecto praesentium ad minima eaque a facilis earum? Sed id aperiam similique vel commodi, facere officia dolorem at? Ex cum nesciunt in, iusto perspiciatis qui explicabo veniam. Iure
+                                ipsa ex facilis quibusdam impedit saepe dolor. Illum quisquam sunt labore odit repudiandae magnam quam!</p>
+                            <br>
 
-                <div>
-                    <label for="email">E mail</label>
-                    <input type="text" name="email" id="email" placeholder="Enter email">
-                </div>
-                <br>
+                        </section>
+                        <section>
+                            <h3>Feedback Form</h3>
+                            <form>
+                                <div>
+                                    <label for="name">Name</label>
+                                    <input type="text" name="name" id="name" placeholder="Enter Name">
+                                </div>
+                                <br>
 
-                <div>
-                    <label for="phone">Phone</label>
-                    <input type="text" name="phone" id="phone" placeholder="Enter phone">
-                </div>
-                <br>
-                <div>
-                    <label>Gender</label>
-                    <input type="radio" name="gender" id="Male" value="Male">
-                    <label for="male">Male</label>
-                    <input type="radio" name="gender" id="Female" value="Female">
-                    <label for="female">Female</label>
-                </div>
-                <br>
+                                <div>
+                                    <label for="email">E mail</label>
+                                    <input type="text" name="email" id="email" placeholder="Enter email">
+                                </div>
+                                <br>
 
-                <div>
-                    <label for="designation">Designation</label>
-                    <select name="designation" id="designation">
-                        <option>CEO</option>
-                        <option>Co - Founder</option>
-                        <option>Financer</option>
-                    </select>
-                </div>
-                <br>
-                <div>
-                    <label>Likes</label>
+                                <div>
+                                    <label for="phone">Phone</label>
+                                    <input type="text" name="phone" id="phone" placeholder="Enter phone">
+                                </div>
+                                <br>
+                                <div>
+                                    <label>Gender</label>
+                                    <input type="radio" name="gender" id="Male" value="Male">
+                                    <label for="male">Male</label>
+                                    <input type="radio" name="gender" id="Female" value="Female">
+                                    <label for="female">Female</label>
+                                </div>
+                                <br>
 
-                    <input type="checkbox" name="football" id="football">
-                    <label for="football">Football</label>
-                    <input type="checkbox" name="cricket" id="cricket">
-                    <label for="cricket">Cricket</label>
-                    <input type="checkbox" name="swimmming" id="swimming">
-                    <label for="swimming">Swimming</label>
-                </div>
-                <br>
+                                <div>
+                                    <label for="designation">Designation</label>
+                                    <select name="designation" id="designation">
+                                        <option>CEO</option>
+                                        <option>Co - Founder</option>
+                                        <option>Financer</option>
+                                    </select>
+                                </div>
+                                <br>
+                                <div>
+                                    <label>Likes</label>
 
-                <div>
-                    <label for="message">Message</label><br>
-                    <textarea name="message" id="message" cols="90" rows="5">Message</textarea>
-                </div>
-                <br>
+                                    <input type="checkbox" name="football" id="football">
+                                    <label for="football">Football</label>
+                                    <input type="checkbox" name="cricket" id="cricket">
+                                    <label for="cricket">Cricket</label>
+                                    <input type="checkbox" name="swimmming" id="swimming">
+                                    <label for="swimming">Swimming</label>
+                                </div>
+                                <br>
 
-                <div>
-                    <button>Submit</button>
-                    <button>Reset</button>
-                </div>
+                                <div>
+                                    <label for="message">Message</label><br>
+                                    <textarea name="message" id="message" cols="90" rows="5">Message</textarea>
+                                </div>
+                                <br>
 
-            </form>
-        </section>
+                                <div>
+                                    <button>Submit</button>
+                                    <button>Reset</button>
+                                </div>
+
+                            </form>
+                        </section>
+
+                    </td>
+                    <td style="vertical-align: top; width:20%">
+                        <section>
+                            <form>
+                                <h4>Search</h4>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                                <input type="text" name="search" id="search" placeholder="Search through the website">
+                                <button>Search</button>
+                            </form>
+                        </section>
+                        <hr>
+                        <section>
+                            <h4>About</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum amet minus aut id reprehenderit adipisci, unde illo accusantium itaque vero.</p>
+                        </section>
+                        <hr>
+                        <section>
+                            <h4>Follow Us at:</h4>
+                            <div>
+                                <a href="https://www.instagram.com/zoomkonnect/?hl=en"> Instagram </a> <br>
+                                <a href="https://www.linkedin.com/in/adnan-sarang-5797471b8/"> linkedin </a>
+                            </div>
+                            <div>
+                                <a href=""></a>
+                            </div>
+                        </section>
+                    </td>
+                </tr>
+            </tbody>
+
+        </table>
+
 
     </main>
     <hr>
