--- a/services.html
+++ b/services.html
@@ -23,11 +23,15 @@
     <hr>
     <main>
         <section>
-            <h2>Our services</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum dolorum rem laboriosam tempora porro necessitatibus voluptatibus iusto rerum saepe veritatis quaerat fugiat sint, cumque iure laudantium aperiam doloribus praesentium,
-                accusantium nisi adipisci iste. Eius illum quis reprehenderit fuga, id saepe nulla possimus aperiam quia itaque recusandae assumenda beatae, ipsam libero, voluptatum aliquid quasi consequatur quisquam consequuntur maxime deleniti. Sint
-                dicta et labore possimus id eaque error illum qui est, ex itaque! Inventore repellendus sit accusantium facilis tempore asperiores magni corporis ea? Pariatur eaque quod expedita eligendi, magnam necessitatibus quo quaerat error aliquid
-                eveniet nemo nisi beatae molestias excepturi iure! </p>
+            <table style="width: 100%;">
+                <tbody>
+                    <tr>
+                        <td style="vertical-align: top; width:80%">
+                            <h2>Our services</h2>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem voluptatum dolorum rem laboriosam tempora porro necessitatibus voluptatibus iusto rerum saepe veritatis quaerat fugiat sint, cumque iure laudantium aperiam doloribus
+                                praesentium, accusantium nisi adipisci iste. Eius illum quis reprehenderit fuga, id saepe nulla possimus aperiam quia itaque recusandae assumenda beatae, ipsam libero, voluptatum aliquid quasi consequatur quisquam consequuntur
+                                maxime deleniti. Sint dicta et labore possimus id eaque error illum qui est, ex itaque! Inventore repellendus sit accusantium facilis tempore asperiores magni corporis ea? Pariatur eaque quod expedita eligendi, magnam necessitatibus
+                                quo quaerat error aliquid eveniet nemo nisi beatae molestias excepturi iure! </p>
         </section>
         <br>
 
@@ -79,8 +83,41 @@
         <br>
 
         <section>
-            <img src="https://picsum.photos/id/257/1500/350" alt="BlueGrass Health Care">
+            <img src="https://picsum.photos/id/257/1200/350" alt="BlueGrass Health Care">
         </section>
+        </td>
+        <td style="vertical-align: top; width:30%">
+            <section>
+                <form>
+                    <h4>Search</h4>
+                    <p>Lorem ipsum dolor sit amet.</p>
+                    <input type="text" name="search" id="search" placeholder="Search through the website">
+                    <button>Search</button>
+                </form>
+            </section>
+            <hr>
+            <section>
+                <h4>About</h4>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum amet minus aut id reprehenderit adipisci, unde illo accusantium itaque vero.</p>
+            </section>
+            <hr>
+            <section>
+                <h4>Follow Us at:</h4>
+                <div>
+                    <a href="https://www.instagram.com/zoomkonnect/?hl=en"> Instagram </a> <br>
+                    <a href="https://www.linkedin.com/in/adnan-sarang-5797471b8/"> linkedin </a>
+                </div>
+                <div>
+                    <a href=""></a>
+                </div>
+            </section>
+        </td>
+        </tr>
+        </tbody>
+
+        </table>
+
+
 
     </main>
     <br>
