--- a/index.html
+++ b/index.html
@@ -24,29 +24,64 @@
     </header>
     <hr>
     <main>
-        <section>
-            <img src="https://picsum.photos/seed/picsum/1530/400" alt="BlueGrass Health Care">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nostrum praesentium, eligendi exercitationem a repellat corporis laborum rem dolore error placeat numquam quo dolorum provident ratione ipsam impedit asperiores sit tempore
-                dicta quis totam fugiat voluptatibus earum. Nobis cupiditate, explicabo molestiae expedita error, veniam dicta, accusamus blanditiis quasi optio iusto cum corrupti nam nostrum voluptatibus. Quae harum neque quod ipsum qui provident nihil
-                fugiat exercitationem in molestias natus minima repudiandae repellat accusantium, eius doloremque placeat nam pariatur? Delectus architecto earum nisi, culpa at molestias, saepe temporibus nobis magni officiis autem placeat non praesentium
-                nostrum dolorum repellat laboriosam laudantium ut nemo!</p>
-        </section>
-        <hr>
-        <div>
-            <h3>Feature 1</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque excepturi saepe vel, dolores ratione velit laboriosam repellendus. Vitae assumenda necessitatibus sapiente quia, tenetur molestias neque. Minus, perspiciatis. Itaque ratione illo,
-                sed soluta adipisci alias corporis ullam iure iusto deserunt corrupti libero et voluptatem natus laudantium quos cumque facilis commodi? Est.</p>
-        </div>
-        <div>
-            <h3>Feature 2</h3>
-            <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates laboriosam minima ducimus asperiores officia iste? Esse non ipsum quas! Molestias voluptatum id aliquam libero omnis porro, vel, repudiandae tenetur quibusdam magnam quas
-                culpa qui maiores maxime? Eum, impedit omnis suscipit, in velit laborum ipsam maxime magnam ducimus, dignissimos ad quos.</P>
-        </div>
-        <div>
-            <h3>Feature 3</h3>
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt tempore cum error aut maiores harum aliquam consequatur architecto modi quam, pariatur eius facilis. Minima ad ipsa nam modi dignissimos consequatur rerum sed perspiciatis
-                porro tenetur sunt cumque optio repellat neque at laboriosam, fuga sequi! Officiis quas vitae commodi praesentium rem?</p>
-        </div>
+        <table style="width: 100%;">
+            <tbody>
+                <tr>
+                    <td style="vertical-align: top;">
+                        <section>
+                            <img src="https://picsum.photos/seed/picsum/1000/400" alt="BlueGrass Health Care">
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae nostrum praesentium, eligendi exercitationem a repellat corporis laborum rem dolore error placeat numquam quo dolorum provident ratione ipsam impedit asperiores
+                                sit tempore dicta quis totam fugiat voluptatibus earum. Nobis cupiditate, explicabo molestiae expedita error, veniam dicta, accusamus blanditiis quasi optio iusto cum corrupti nam nostrum voluptatibus. Quae harum neque
+                                quod ipsum qui provident nihil fugiat exercitationem in molestias natus minima repudiandae repellat accusantium, eius doloremque placeat nam pariatur? Delectus architecto earum nisi, culpa at molestias, saepe temporibus
+                                nobis magni officiis autem placeat non praesentium nostrum dolorum repellat laboriosam laudantium ut nemo!</p>
+                        </section>
+                        <hr>
+                        <div>
+                            <h3>Feature 1</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque excepturi saepe vel, dolores ratione velit laboriosam repellendus. Vitae assumenda necessitatibus sapiente quia, tenetur molestias neque. Minus, perspiciatis. Itaque
+                                ratione illo, sed soluta adipisci alias corporis ullam iure iusto deserunt corrupti libero et voluptatem natus laudantium quos cumque facilis commodi? Est.</p>
+                        </div>
+                        <div>
+                            <h3>Feature 2</h3>
+                            <P>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptates laboriosam minima ducimus asperiores officia iste? Esse non ipsum quas! Molestias voluptatum id aliquam libero omnis porro, vel, repudiandae tenetur quibusdam
+                                magnam quas culpa qui maiores maxime? Eum, impedit omnis suscipit, in velit laborum ipsam maxime magnam ducimus, dignissimos ad quos.</P>
+                        </div>
+                        <div>
+                            <h3>Feature 3</h3>
+                            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nesciunt tempore cum error aut maiores harum aliquam consequatur architecto modi quam, pariatur eius facilis. Minima ad ipsa nam modi dignissimos consequatur rerum sed
+                                perspiciatis porro tenetur sunt cumque optio repellat neque at laboriosam, fuga sequi! Officiis quas vitae commodi praesentium rem?</p>
+                        </div>
+                    </td>
+                    <td style="vertical-align: top; width:20%">
+                        <section>
+                            <form>
+                                <h4>Search</h4>
+                                <p>Lorem ipsum dolor sit amet.</p>
+                                <input type="text" name="search" id="search" placeholder="Search through the website">
+                                <button>Search</button>
+                            </form>
+                        </section>
+                        <hr>
+                        <section>
+                            <h4>About</h4>
+                            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eum amet minus aut id reprehenderit adipisci, unde illo accusantium itaque vero.</p>
+                        </section>
+                        <hr>
+                        <section>
+                            <h4>Follow Us at:</h4>
+                            <div>
+                                <a href="https://www.instagram.com/zoomkonnect/?hl=en"> Instagram </a> <br>
+                                <a href="https://www.linkedin.com/in/adnan-sarang-5797471b8/"> linkedin </a>
+                            </div>
+                            <div>
+                                <a href=""></a>
+                            </div>
+                        </section>
+                    </td>
+                </tr>
+            </tbody>
+
+        </table>
 
     </main>
     <hr>
